Batch, Webinar, contact and Index page updated

--- a/batch.html
+++ b/batch.html
@@ -66,11 +66,14 @@ https://templatemo.com/tm-538-digital-trend
                     <a href="index.html" class="nav-link smoothScroll">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://chat.whatsapp.com/JbLKfAnggFm1dJyE37ILKt" class="nav-link smoothScroll">Join Whatsapp Techincal Seminar</a>
+                    <a href="https://chat.whatsapp.com/JbLKfAnggFm1dJyE37ILKt" class="nav-link smoothScroll">Join Whatsapp Group</a>
                 </li>
                 <li class="nav-item">
                   <a href="https://www.youtube.com/@yttalearning" class="nav-link">YouTube channel </a>
                 </li>
+                <li>
+                <a href="webinar.html" class="nav-link contact">Register for Webinar</a>
+              </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link contact">Contact</a>
                 </li>
@@ -102,37 +105,34 @@ https://templatemo.com/tm-538-digital-trend
                     </div>
 
                     <section class="project" id="project">
-                      <div class="batch">
-                        <h2>Python for Kids</h2>
-                        <h4>Fast Track Batch for grade 5 to 8.</h4>
-                        <br/>
-                        <h3>Option 1</h3>
-                        <p><strong>Start Date:</strong> August 10, 2024 &nbsp;&nbsp; <strong>End Date:</strong> October 12, 2024 </p>
-                        <p><strong>Timings:</strong> 4:30 PM IST | 12:00 PM BST | 7:00 PM ULAT</p>
-                        <h3>Option 2</h3>
-                        <p><strong>Start Date:</strong> August 11, 2024 &nbsp;&nbsp; <strong>End Date:</strong> October 13, 2024 </p>
-                        <p><strong>Timings:</strong> 4:00 PM IST | 11:30 AM BST | 6:30 PM ULAT</p>
-                        
-                        <h3>Other Details</h3>
-                        <p><strong>Duration:</strong> 10 days - 1.5 hours</p>
-                        <p><strong>Description:</strong> Kids will learn basics of Coding with Python language. This program will help the learner to write basic python code. Duration of the course is 15 hours. </p>
-                        <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
-                        <p>Whatsapp us +91 9812804466, +91 9717308866.</p>
-                        <!-- below form link is from CSM New Registeration JR.-->
-                        <a href="https://forms.gle/7gb7FP8LL8pT6ZC39" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
-                    </div>
-                      <div class="batch">
+                       <div class="batch">
                         <h2>Microsoft Power BI</h2>
-                        <h4>Microsoft Certification Ready Training</h4>
+                        <h4>Microsoft Certification Ready Training </h4>
                         <br/>
                         <p><strong>Start Date:</strong> August 18, 2024 &nbsp;&nbsp; <strong>End Date:</strong> September 8, 2024 </p>
                         <p><strong>Duration:</strong> 4 Sundays - 8 hours</p>
                         <p><strong>Description:</strong> Learn Data analysis using Power BI. Be ready to appear for Microsoft Certification. Duration of the Course is 32 hours.</p>
                         <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
                         <p>Whatsapp us +91 9812804466, +91 9717308866.</p>
+                        <p><strong>Fees: </strong> $362</p>
                         <!-- below link is from CSM New Registration SR.-->
+                        <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
                         <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
                     </div>
+                    <div class="batch">
+                      <h2>Microsoft Azure</h2>
+                      <h4>Microsoft Certification Ready Training - AZ-900 + AZ-204 </h4>
+                      <br/>
+                      <p><strong>Start Date:</strong> August 26, 2024 &nbsp;&nbsp; <strong>End Date:</strong> August 31, 2024 </p>
+                      <p><strong>Duration:</strong> 6 Days - 8 hours</p>
+                      <p><strong>Description:</strong> Learn Azure Fundamentals and Development. Be ready to appear for Microsoft Certification. Duration of the Course is 32 hours.</p>
+                      <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                      <p>Whatsapp us +91 9812804466, +91 9717308866.</p>
+                      <p><strong>Fees: </strong> $648</p>
+                      <!-- below link is from CSM New Registration SR.-->
+                      <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
+                      <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
+                  </div>
                     <div class="batch">
                       <h2>SQL for Everyone</h2>
                       <h4>Suitable for Grade 11 & 12, Anyone who wants to learn writing SQL Queries</h4>
@@ -143,6 +143,8 @@ https://templatemo.com/tm-538-digital-trend
                       <p><strong>Description:</strong> Learn SQL to be efficient in Data Engineering. Writing SQL queries is helpful to bring required data from the data sources. Duration of the Course is 12 hours.</p>
                       <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
                       <p>Whatsapp us +91 9812804466, +91 9717308866.</p>
+                      <p><strong>Fees: </strong> $108</p>
+                      <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
                       <!-- below link is from CSM New Registration SR.-->
                       <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
                       <!-- below form link is from CSM New Registeration JR.-->
