--- a/contact.html
+++ b/contact.html
@@ -69,11 +69,11 @@ https://templatemo.com/tm-538-digital-trend
           <div class="container">
                <div class="row">
 
-                    <div class="col-lg-6 mx-auto col-md-7 col-12 py-5 mt-5 text-center" data-aos="fade-up">
+                    <div class="col-lg-12 mx-auto col-md-7 col-12 py-5 mt-5 text-center" data-aos="fade-up">
 
                       <h1 class="mb-4">Hey there, Let's <strong>talk</strong> about <strong>creative</strong> projects</h1>
 
-                      <p>or email us at <a href="mailto:info.techytta@gmail.com">info.techytta@gmail.com</a></p>
+                      <p>email us at <a href="mailto:info.techytta@gmail.com">info.techytta@gmail.com</a> or  <a href="https://calendly.com/ytta"><strong>Schedule call with us.</strong></a></p>
                       <p>Please contact us using <strong><a rel="nofollow" href="https://forms.gle/FWQrENuciXyMkdow7">contact page</a></strong> to discuss with us.</p>
                     </div>
 
