--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@ https://templatemo.com/tm-538-digital-trend
                         <a href="#about" class="nav-link smoothScroll">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#project" class="nav-link smoothScroll">Courses</a>
-                    </li>
+                         <a href="https://chat.whatsapp.com/JbLKfAnggFm1dJyE37ILKt" class="nav-link smoothScroll">Join Whatsapp Group</a>
+                     </li>
+                     <li class="nav-item">
+                       <a href="https://www.youtube.com/@yttalearning" class="nav-link">YouTube channel </a>
+                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link contact">Contact</a>
                         <a href="webinar.html" class="nav-link contact">Register for Webinar</a>
