--- a/batch.html
+++ b/batch.html
@@ -94,7 +94,7 @@ https://templatemo.com/tm-538-digital-trend
                         <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Live Online Training</a>
                         <a href="webinar.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">1-on-1 Training</a>
                         <a href="webinar.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Bring Trainer to Your Location (BTL)</a>
-                      <p>You may email us for any query on <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a>, Call or Whatsapp: +91 9812804466, +91 9717308866.
+                      <p>You may email us for any query on <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a>, Call or Whatsapp: +91 9812804466, +91 9717428073.
                       Please contact us using <strong><a rel="nofollow" href="https://forms.gle/FWQrENuciXyMkdow7"><u>contact page</u></a></strong> to discuss with us.</p>
                     </div>
 
@@ -112,22 +112,38 @@ https://templatemo.com/tm-538-digital-trend
                         <p><strong>Start Date:</strong> August 18, 2024 &nbsp;&nbsp; <strong>End Date:</strong> September 8, 2024 </p>
                         <p><strong>Duration:</strong> 4 Sundays - 8 hours</p>
                         <p><strong>Description:</strong> Learn Data analysis using Power BI. Be ready to appear for Microsoft Certification. Duration of the Course is 32 hours.</p>
-                        <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
-                        <p>Whatsapp us +91 9812804466, +91 9717308866.</p>
+                        <p> For further details related to course content, fees in INR and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                        <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                         <p><strong>Fees: </strong> $362</p>
                         <!-- below link is from CSM New Registration SR.-->
                         <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
                         <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
                     </div>
                     <div class="batch">
-                      <h2>Microsoft Azure</h2>
+                       <h2>Python & SQL</h2>
+                       <h4>Suitable for Grade 11 & 12, Anyone who wants to learn Python </h4>
+                       <br/>
+                       <p><strong>Start Date:</strong> August 24, 2024 &nbsp;&nbsp; <strong>End Date:</strong> Octoberr 27, 2024 </p>
+                       <p><strong>Duration:</strong> 42 hours </p>
+                       <p><strong>Description:</strong> Learn Python programming in 30 hours, which will help you to decide your next level. Joining this program will also give you previlige to learn SQL.</p>
+                       <p> For further details related to course content, fees in INR and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                       <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
+                       <p><strong>Fees: </strong> $334</p>
+                       <!-- below link is from CSM New Registration SR.-->
+                       <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
+                       <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
+                       <!-- below form link is from CSM New Registeration JR.-->
+                      <a href="https://forms.gle/7gb7FP8LL8pT6ZC39" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book Course for 11 or 12.</a>
+                   </div>
+                    <div class="batch">
+                      <h2>Microsoft Azure Developer</h2>
                       <h4>Microsoft Certification Ready Training - AZ-900 + AZ-204 </h4>
                       <br/>
                       <p><strong>Start Date:</strong> August 26, 2024 &nbsp;&nbsp; <strong>End Date:</strong> August 31, 2024 </p>
                       <p><strong>Duration:</strong> 6 Days - 8 hours</p>
                       <p><strong>Description:</strong> Learn Azure Fundamentals and Development. Be ready to appear for Microsoft Certification. Duration of the Course is 32 hours.</p>
                       <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
-                      <p>Whatsapp us +91 9812804466, +91 9717308866.</p>
+                      <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                       <p><strong>Fees: </strong> $648</p>
                       <!-- below link is from CSM New Registration SR.-->
                       <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
@@ -142,7 +158,7 @@ https://templatemo.com/tm-538-digital-trend
                       <p><strong>Duration:</strong> 2 Weekends (Saturday and Sunday) - 3 hours </p>
                       <p><strong>Description:</strong> Learn SQL to be efficient in Data Engineering. Writing SQL queries is helpful to bring required data from the data sources. Duration of the Course is 12 hours.</p>
                       <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
-                      <p>Whatsapp us +91 9812804466, +91 9717308866.</p>
+                      <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                       <p><strong>Fees: </strong> $108</p>
                       <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
                       <!-- below link is from CSM New Registration SR.-->
@@ -150,6 +166,21 @@ https://templatemo.com/tm-538-digital-trend
                       <!-- below form link is from CSM New Registeration JR.-->
                       <a href="https://forms.gle/7gb7FP8LL8pT6ZC39" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book Course for 11 or 12.</a>
                   </div>
+                  <div class="batch">
+                    <h2>One-Day Workshops</h2>
+                    <h4>Online Live workshops</h4>
+                    <br/>
+                    <p><strong>Fees: </strong> $108 for each workshop</p>
+                    <p> You can register for the one-day Workshop Training program as per your availabilty. For details related to course content, fees in INR, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                    <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
+                    <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Schedule your Call</a>
+                    <!-- below link is from CSM New Registration SR.-->                  
+                    <p>PL-900: Microsoft Power Platform Fundamentals <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>Power BI - Data to Dashboard <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>AZ-900: Microsoft Azure Fundamentals <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>AI-900: Microsoft AI Fundamentals <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>Copilot Studio: Build ChatBot <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>Git and GitHub <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
 
      </section>
             
