Batchs and Webinar updated with Python and Scratch

--- a/batch.html
+++ b/batch.html
@@ -105,7 +105,7 @@ https://templatemo.com/tm-538-digital-trend
                     </div>
 
                     <section class="project" id="project">
-                       <div class="batch">
+                       <!--<div class="batch">
                         <h2>Microsoft Power BI</h2>
                         <h4>Microsoft Certification Ready Training </h4>
                         <br/>
@@ -114,9 +114,9 @@ https://templatemo.com/tm-538-digital-trend
                         <p><strong>Description:</strong> Learn Data analysis using Power BI. Be ready to appear for Microsoft Certification. Duration of the Course is 32 hours.</p>
                         <p> For further details related to course content, fees in INR and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
                         <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
-                        <p><strong>Fees: </strong> $362</p>
+                        <p><strong>Fees: </strong> $362</p>-->
                         <!-- below link is from CSM New Registration SR.-->
-                        <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
+                        <!--<a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
                         <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
                     </div>
                     <div class="batch">
@@ -128,12 +128,12 @@ https://templatemo.com/tm-538-digital-trend
                        <p><strong>Description:</strong> Learn Python programming in 30 hours, which will help you to decide your next level. Joining this program will also give you previlige to learn SQL.</p>
                        <p> For further details related to course content, fees in INR and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
                        <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
-                       <p><strong>Fees: </strong> $334</p>
+                       <p><strong>Fees: </strong> $334</p>-->
                        <!-- below link is from CSM New Registration SR.-->
-                       <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
-                       <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
+                       <!--<a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
+                       <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>-->
                        <!-- below form link is from CSM New Registeration JR.-->
-                      <a href="https://forms.gle/7gb7FP8LL8pT6ZC39" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book Course for 11 or 12.</a>
+                      <!--<a href="https://forms.gle/7gb7FP8LL8pT6ZC39" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book Course for 11 or 12.</a>
                    </div>
                     <div class="batch">
                       <h2>Microsoft Azure Developer</h2>
@@ -144,9 +144,9 @@ https://templatemo.com/tm-538-digital-trend
                       <p><strong>Description:</strong> Learn Azure Fundamentals and Development. Be ready to appear for Microsoft Certification. Duration of the Course is 32 hours.</p>
                       <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
                       <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
-                      <p><strong>Fees: </strong> $648</p>
+                      <p><strong>Fees: </strong> $648</p>-->
                       <!-- below link is from CSM New Registration SR.-->
-                      <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
+                      <!--<a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
                       <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
                   </div>
                     <div class="batch">
@@ -160,11 +160,29 @@ https://templatemo.com/tm-538-digital-trend
                       <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
                       <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                       <p><strong>Fees: </strong> $108</p>
-                      <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>
+                      <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>-->
                       <!-- below link is from CSM New Registration SR.-->
-                      <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>
+                      <!--<a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a>-->
                       <!-- below form link is from CSM New Registeration JR.-->
-                      <a href="https://forms.gle/7gb7FP8LL8pT6ZC39" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book Course for 11 or 12.</a>
+                      <!--<a href="https://forms.gle/7gb7FP8LL8pT6ZC39" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book Course for 11 or 12.</a>
+                  </div>-->
+                  <div class="batch">
+                    <h2>Coding Programs for School Students</h2>
+                    <h4>Online Live Classes on Weekends</h4>
+                    <br/>
+                    <p><strong>Fees: </strong> $10 for each session or $35 for Month(4 classes)</p>
+                    <p> Parents can register the kids for the one session or for monthly program. For details related to course content, fees in INR, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                    <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
+                    <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Schedule your Call</a>
+                    <!-- below link is from CSM New Registration SR.-->                  
+                    <p>Scratch for Kids <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>Python for Kids <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>AI with Python for Grade 9 & 10 <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>Python for Grade 11 & 12 <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>Learn SQL with DBMS <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>Basics of Computers<a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>Responsible AI for School Students<a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                    <p>MS Office 365<a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
                   </div>
                   <div class="batch">
                     <h2>One-Day Workshops</h2>
@@ -181,6 +199,7 @@ https://templatemo.com/tm-538-digital-trend
                     <p>AI-900: Microsoft AI Fundamentals <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
                     <p>Copilot Studio: Build ChatBot <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
                     <p>Git and GitHub <a href="https://forms.gle/pXfoCRi2W4pgwxLb7" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Course.</a></p>
+                  </div>
 
      </section>
             
