--- a/webinar.html
+++ b/webinar.html
@@ -97,40 +97,40 @@ https://templatemo.com/tm-538-digital-trend
                             <h1 class="mb-4"><strong>Upcoming Webinars</strong> </a></h1>
                      </div>
                      <section class="project" id="project">
-                      <!--SQL Webinar-->
+                      <!--Python Webinar-->
                       <div class="batch">
                         <div>
                           <table>
                             <tr class="mx-auto">
-                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="images/Webinars/SQLWebinar24Aug.jpg" style="width: 200px; height: 300px;"/></a></td>
-                              <td>Learning SQL offers numerous benefits, including high demand in various industries, efficient data querying and manipulation, and seamless integration with other technologies. It enhances decision-making through data-driven insights, provides a solid foundation for advanced data skills, and is accessible with free resources. SQL also promotes logical thinking and opens doors for career advancement in data-related fields.</td>
+                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="images/Webinars/Python13Oct.jpg" style="width: 200px; height: 300px;"/></a></td>
+                              <td>Python is an incredibly versatile and beginner-friendly programming language, perfect for young minds eager to dive into the world of coding. By joining this webinar, your child will not only learn the basics of Python but also develop critical thinking and problem-solving skills. Our engaging and interactive sessions are designed to make learning fun and accessible, ensuring that kids stay motivated and excited about technology. </td>
                             </tr>
                           </table>
                         <a href="https://forms.gle/XY6adSVMhs7uY9rc8"><strong>Register Now for Free webinar!!!</strong> </a>
                       </div>
                       </div>
-                      <!--AWS Webinar-->
+                      <!--Scratch Webinar-->
                       <div class="batch">
                         <div>
                           <table>
                             <tr class="mx-auto">
-                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="images/Webinars/AWSWeb25Aug.jpg" style="width: 200px; height: 300px;"/></a></td>
-                              <td>Learning AWS Cloud provides the skills to design, deploy, and manage scalable and secure cloud infrastructure. As the leading cloud platform, AWS offers a wide range of services for computing, storage, and databases, making it essential for businesses and tech professionals. Mastering AWS opens doors to high-demand roles in cloud architecture, DevOps, and IT management.</td>
+                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="images/Webinars/scratch18Oct.jpg" style="width: 200px; height: 300px;"/></a></td>
+                              <td>Spark your child’s interest in coding with our Scratch for Kids webinar! Scratch is an intuitive, block-based programming language that makes learning to code fun and easy for young learners. During this webinar, your child will discover how to create their own games, animations, and interactive stories, all while enhancing their creativity and logical thinking skills. Our sessions are designed to be engaging and hands-on, ensuring that kids not only learn but also enjoy the process. Give your child the gift of coding and watch their imagination soar!</td>
                             </tr>
                           </table>
                         <a href="https://forms.gle/XY6adSVMhs7uY9rc8"><strong>Register Now for Free webinar!!!</strong> </a>
                       </div>
                       </div>
-                      <!--Copilot Webinar-->
+                      <!--Parenting Webinar-->
                       <div class="batch">
                         <div>
                           <table>
                             <tr class="mx-auto">
-                              <td style="padding: 10px;"><a href="https://events.teams.microsoft.com/event/c5e927cd-397c-4ed5-8353-c0802fe664e9@40c9a452-7e40-4bcb-b016-09160783f198"><img src="images/Webinars/copilotWeb3sep.jpg" style="width: 200px; height: 300px;"/></a></td>
-                              <td>Microsoft Copilot boosts productivity by integrating AI into Microsoft tools like Word, Excel, and Teams. It automates routine tasks, provides smart suggestions, and delivers data-driven insights, streamlining workflows and enhancing collaboration. Learning about Copilot equips you with the skills to leverage advanced AI features, optimize efficiency, and stay ahead in the digital workspace.</td>
+                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="images/Webinars/Parenting27Oct.jpg" style="width: 200px; height: 300px;"/></a></td>
+                              <td>Join our Parenting Webinar and empower yourself with the tools and knowledge to nurture your child’s growth and development! This webinar is designed to provide parents with practical strategies and insights on effective parenting techniques, fostering a positive and supportive home environment, and understanding the unique needs of your child. Our expert speakers will share valuable tips on communication, discipline, and emotional well-being, helping you to build a stronger, more connected relationship with your child. Don’t miss this opportunity to enhance your parenting skills and create a nurturing space where your child can thrive.</td>
                             </tr>
                           </table>
-                        <a href="https://events.teams.microsoft.com/event/c5e927cd-397c-4ed5-8353-c0802fe664e9@40c9a452-7e40-4bcb-b016-09160783f198"><strong>Register Now for Free webinar!!!</strong> </a>
+                        <a href="https://forms.gle/XY6adSVMhs7uY9rc8"><strong>Register Now for Free webinar!!!</strong> </a>
                       </div>
                       </div>
      </section>
