Webinar image links and 2 ms forms link updated

--- a/batch.html
+++ b/batch.html
@@ -94,7 +94,7 @@ https://templatemo.com/tm-538-digital-trend
                         <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Live Online Training</a>
                         <a href="webinar.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">1-on-1 Training</a>
                         <a href="webinar.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Bring Trainer to Your Location (BTL)</a>
-                      <p>You may email us for any query on <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a>, Call or Whatsapp: +91 9812804466, +91 9717428073.
+                      <p>You may email us for any query on <a href="mailto:training@ytta.in"><u>training@ytta.in</u></a>, Call or Whatsapp: +91 9812804466, +91 9717428073.
                       Please contact us using <strong><a rel="nofollow" href="https://forms.gle/FWQrENuciXyMkdow7"><u>contact page</u></a></strong> to discuss with us.</p>
                     </div>
 
@@ -112,7 +112,7 @@ https://templatemo.com/tm-538-digital-trend
                         <p><strong>Start Date:</strong> August 18, 2024 &nbsp;&nbsp; <strong>End Date:</strong> September 8, 2024 </p>
                         <p><strong>Duration:</strong> 4 Sundays - 8 hours</p>
                         <p><strong>Description:</strong> Learn Data analysis using Power BI. Be ready to appear for Microsoft Certification. Duration of the Course is 32 hours.</p>
-                        <p> For further details related to course content, fees in INR and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                        <p> For further details related to course content, fees in INR and Schedule, drop mail <a href="mailto:training@ytta.in"><u>training@ytta.in</u></a> or </p>
                         <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                         <p><strong>Fees: </strong> $362</p>-->
                         <!-- below link is from CSM New Registration SR.-->
@@ -126,7 +126,7 @@ https://templatemo.com/tm-538-digital-trend
                        <p><strong>Start Date:</strong> August 24, 2024 &nbsp;&nbsp; <strong>End Date:</strong> Octoberr 27, 2024 </p>
                        <p><strong>Duration:</strong> 42 hours </p>
                        <p><strong>Description:</strong> Learn Python programming in 30 hours, which will help you to decide your next level. Joining this program will also give you previlige to learn SQL.</p>
-                       <p> For further details related to course content, fees in INR and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                       <p> For further details related to course content, fees in INR and Schedule, drop mail <a href="mailto:training@ytta.in"><u>training@ytta.in</u></a> or </p>
                        <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                        <p><strong>Fees: </strong> $334</p>-->
                        <!-- below link is from CSM New Registration SR.-->
@@ -142,7 +142,7 @@ https://templatemo.com/tm-538-digital-trend
                       <p><strong>Start Date:</strong> August 26, 2024 &nbsp;&nbsp; <strong>End Date:</strong> August 31, 2024 </p>
                       <p><strong>Duration:</strong> 6 Days - 8 hours</p>
                       <p><strong>Description:</strong> Learn Azure Fundamentals and Development. Be ready to appear for Microsoft Certification. Duration of the Course is 32 hours.</p>
-                      <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                      <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:training@ytta.in"><u>training@ytta.in</u></a> or </p>
                       <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                       <p><strong>Fees: </strong> $648</p>-->
                       <!-- below link is from CSM New Registration SR.-->
@@ -157,7 +157,7 @@ https://templatemo.com/tm-538-digital-trend
                       <p><strong>Timings:</strong> 7:00 PM IST | 9:30 AM EST | 5:30 PM UAE Time</p>
                       <p><strong>Duration:</strong> 2 Weekends (Saturday and Sunday) - 3 hours </p>
                       <p><strong>Description:</strong> Learn SQL to be efficient in Data Engineering. Writing SQL queries is helpful to bring required data from the data sources. Duration of the Course is 12 hours.</p>
-                      <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                      <p> For further details related to course content, fees and Schedule, drop mail <a href="mailto:training@ytta.in"><u>training@ytta.in</u></a> or </p>
                       <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                       <p><strong>Fees: </strong> $108</p>
                       <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Book your Demo.</a>-->
@@ -171,7 +171,7 @@ https://templatemo.com/tm-538-digital-trend
                     <h4>Online Live Classes on Weekends</h4>
                     <br/>
                     <p><strong>Fees: </strong> $10 for each session or $35 for Month(4 classes)</p>
-                    <p> Parents can register the kids for the one session or for monthly program. For details related to course content, fees in INR, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                    <p> Parents can register the kids for the one session or for monthly program. For details related to course content, fees in INR, drop mail <a href="mailto:training@ytta.in"><u>training@ytta.in</u></a> or </p>
                     <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                     <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Schedule your Call</a>
                     <!-- below link is from CSM New Registration SR.-->                  
@@ -189,7 +189,7 @@ https://templatemo.com/tm-538-digital-trend
                     <h4>Online Live workshops</h4>
                     <br/>
                     <p><strong>Fees: </strong> $108 for each workshop</p>
-                    <p> You can register for the one-day Workshop Training program as per your availabilty. For details related to course content, fees in INR, drop mail <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a> or </p>
+                    <p> You can register for the one-day Workshop Training program as per your availabilty. For details related to course content, fees in INR, drop mail <a href="mailto:training@ytta.in"><u>training@ytta.in</u></a> or </p>
                     <p>Whatsapp us +91 9812804466, +91 9717428073.</p>
                     <a href="https://calendly.com/ytta" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Schedule your Call</a>
                     <!-- below link is from CSM New Registration SR.-->                  
@@ -226,7 +226,7 @@ https://templatemo.com/tm-538-digital-trend
             <p>
               <a href="#">
                 <i class="fa fa-envelope mr-2 footer-icon"></i>
-                info.techytta@gmail.com
+                training@ytta.in
               </a>
             </p>
           </div>
