--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@ https://templatemo.com/tm-538-digital-trend
 
                       <h1 class="mb-4">Hey there, Let's <strong>talk</strong> about <strong>creative</strong> projects</h1>
 
-                      <p>email us at <a href="mailto:info.techytta@gmail.com">info.techytta@gmail.com</a> or  <a href="https://calendly.com/ytta"><strong>Schedule call with us.</strong></a></p>
+                      <p>email us at <a href="mailto:training@ytta.in">training@ytta.in</a> or  <a href="https://calendly.com/ytta"><strong>Schedule call with us.</strong></a></p>
                       <p>Please contact us using <strong><a rel="nofollow" href="https://forms.gle/FWQrENuciXyMkdow7">contact page</a></strong> to discuss with us.</p>
                     </div>
 
@@ -138,7 +138,7 @@ https://templatemo.com/tm-538-digital-trend
             <p>
               <a href="#">
                 <i class="fa fa-envelope mr-2 footer-icon"></i>
-                info.techytta@gmail.com
+                training@ytta.in
               </a>
             </p>
           </div>
