--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ https://templatemo.com/tm-538-digital-trend
             <p>
               <a href="#">
                 <i class="fa fa-envelope mr-2 footer-icon"></i>
-                info.techytta@gmail.com
+                training@ytta.in
               </a>
             </p>
           </div>
