--- a/webinar.html
+++ b/webinar.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-538-digital-trend
 
                       <h1 class="mb-4">Hey there, Let's be the part of <strong>Digital World</strong> Start your learning journey today by joining us on Webinar.</h1>
 
-                      <p>You may email us for any query on <a href="mailto:info.techytta@gmail.com"><u>info.techytta@gmail.com</u></a></p>
+                      <p>You may email us for any query on <a href="mailto:training@ytta.in"><u>training@ytta.in</u></a></p>
                       <p>Please contact us using <strong><a rel="nofollow" href="https://forms.gle/FWQrENuciXyMkdow7"><u>contact page</u></a></strong> to discuss with us.</p>
                     </div>
 
@@ -102,11 +102,11 @@ https://templatemo.com/tm-538-digital-trend
                         <div>
                           <table>
                             <tr class="mx-auto">
-                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="images/Webinars/Python13Oct.jpg" style="width: 200px; height: 300px;"/></a></td>
+                              <td style="padding: 10px;"><a href="https://forms.office.com/r/qavjccKYmt"><img src="https://yttaimages.blob.core.windows.net/webinar/PythonWorkshop.png" style="width: 200px; height: 300px;"/></a></td>
                               <td>Python is an incredibly versatile and beginner-friendly programming language, perfect for young minds eager to dive into the world of coding. By joining this webinar, your child will not only learn the basics of Python but also develop critical thinking and problem-solving skills. Our engaging and interactive sessions are designed to make learning fun and accessible, ensuring that kids stay motivated and excited about technology. </td>
                             </tr>
                           </table>
-                        <a href="https://forms.gle/XY6adSVMhs7uY9rc8"><strong>Register Now for Free webinar!!!</strong> </a>
+                        <a href="https://forms.office.com/r/qavjccKYmt"><strong>Register Now for Free webinar!!!</strong> </a>
                       </div>
                       </div>
                       <!--Scratch Webinar-->
@@ -114,11 +114,11 @@ https://templatemo.com/tm-538-digital-trend
                         <div>
                           <table>
                             <tr class="mx-auto">
-                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="images/Webinars/scratch18Oct.jpg" style="width: 200px; height: 300px;"/></a></td>
+                              <td style="padding: 10px;"><a href="https://forms.office.com/r/R3tx514bMf"><img src="https://yttaimages.blob.core.windows.net/webinar/ScratchWorkshop.PNG" style="width: 200px; height: 300px;"/></a></td>
                               <td>Spark your child’s interest in coding with our Scratch for Kids webinar! Scratch is an intuitive, block-based programming language that makes learning to code fun and easy for young learners. During this webinar, your child will discover how to create their own games, animations, and interactive stories, all while enhancing their creativity and logical thinking skills. Our sessions are designed to be engaging and hands-on, ensuring that kids not only learn but also enjoy the process. Give your child the gift of coding and watch their imagination soar!</td>
                             </tr>
                           </table>
-                        <a href="https://forms.gle/XY6adSVMhs7uY9rc8"><strong>Register Now for Free webinar!!!</strong> </a>
+                        <a href="https://forms.office.com/r/R3tx514bMf"><strong>Register Now for Free webinar!!!</strong> </a>
                       </div>
                       </div>
                       <!--Parenting Webinar-->
@@ -126,7 +126,7 @@ https://templatemo.com/tm-538-digital-trend
                         <div>
                           <table>
                             <tr class="mx-auto">
-                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="images/Webinars/Parenting27Oct.jpg" style="width: 200px; height: 300px;"/></a></td>
+                              <td style="padding: 10px;"><a href="https://forms.gle/XY6adSVMhs7uY9rc8"><img src="https://yttaimages.blob.core.windows.net/webinar/ParentSession.png" style="width: 200px; height: 300px;"/></a></td>
                               <td>Join our Parenting Webinar and empower yourself with the tools and knowledge to nurture your child’s growth and development! This webinar is designed to provide parents with practical strategies and insights on effective parenting techniques, fostering a positive and supportive home environment, and understanding the unique needs of your child. Our expert speakers will share valuable tips on communication, discipline, and emotional well-being, helping you to build a stronger, more connected relationship with your child. Don’t miss this opportunity to enhance your parenting skills and create a nurturing space where your child can thrive.</td>
                             </tr>
                           </table>
@@ -207,7 +207,7 @@ https://templatemo.com/tm-538-digital-trend
             <p>
               <a href="#">
                 <i class="fa fa-envelope mr-2 footer-icon"></i>
-                info.techytta@gmail.com
+                training@ytta.in
               </a>
             </p>
           </div>
